adding REST Routes for testing
